Mobile Front End
Added news

--- a/Test iOS/app/View/main.html
+++ b/Test iOS/app/View/main.html
@@ -6,21 +6,26 @@
 <head>
 
     <!-- load scripts -->
-    <script src="~/Scripts/jquery-1.10.2.js"></script>
-    <script src="~/Scripts/bootstrap.min.js"></script>
+    <script src="../../Scripts/jquery-1.10.2.js"></script>
+    <script src="../../Scripts/bootstrap.js"></script>
+   
 
     <!-- Load CSS -->
-    <link href="~/app/Content/bootstrap.css" rel="stylesheet" />
-    <link href="~/app/Content/fonts/font-awesome-4.7.0/css/font-awesome.min.css" rel="stylesheet" />
-
-
+    <link href="../Content/fonts/font-awesome-4.7.0/css/font-awesome.css" rel="stylesheet" />
+    <link href="../Content/bootstrap.css" rel="stylesheet" />
     <!-- load angular -->
 
     <script src="../../Scripts/angular.js"></script>
     <script src="../../Scripts/angular-route.min.js"></script>
 
     <!-- Add Routes / Define module -->
+    <script src="app.js"></script>
+    <script src="../Controller/news.js"></script>
+
     <script src="routes.js"></script>
+
+    <!-- Add Angular Controllers-->
+  
 
     <!-- Page Title -->
     <title>Landing Page</title>
