--- a/Test iOS/app/Content/CSS/landing.css
+++ b/Test iOS/app/Content/CSS/landing.css
@@ -17,11 +17,18 @@
 .mobile-header {
     background:#67BB4A;
     padding-top: 4px;
+    max-width:100%;
+}
+
+.mobile-header-back {
+    margin-bottom:4px;
 }
 
 .header-text {
+    height:30%;
     font: bold 28px sans-serif, arial;
     color: white; 
+    padding: 8px 50px 0px 0px;
    
 }
 
@@ -46,18 +53,8 @@ a > i{
 
 .main-menu {
     background:white;
-    padding: 0% 100% 100% 100%;
-    width:auto;
+   
 }
 
 
 
-.row.no-gutters {
-  margin-right: 0;
-  margin-left: 0;
-}
-.row.no-gutters > [class^="col-"],
-.row.no-gutters > [class*=" col-"] {
-  padding-right: 0;
-  padding-left: 0;
-}
