--- a/Test iOS/app/View/more_info.html
+++ b/Test iOS/app/View/more_info.html
@@ -8,7 +8,7 @@
     <!-- load scripts -->
     <script src="../../Scripts/jquery-1.10.2.js"></script>
     <script src="../../Scripts/bootstrap.js"></script>
-   
+
 
     <!-- Load CSS -->
     <link href="../Content/fonts/font-awesome-4.7.0/css/font-awesome.css" rel="stylesheet" />
@@ -26,8 +26,6 @@
     <script src="routes.js"></script>
 
     <!-- Add Angular Controllers-->
-  
-
     <!-- Page Title -->
     <title>Auerfarm</title>
 </head>
@@ -39,25 +37,24 @@
 
     <!-- Main Body -->
     <!--<div class="row">-->
-     
-        <!-- Partial HTML Page -->
-        <div class="col-sm-12 container-fluid" ng-controller="MainController as MainC">
-            <div class="row mobile-header">
+    <!-- Partial HTML Page -->
+    <div class="col-sm-12 container-fluid" ng-controller="MoreController as MoreC">
+        <div class="row mobile-header">
 
-                <div class="col-lg-2 col-sm-2 col-xs-2">
-                    <a href="#/main" ng-hide="{{MainC.back}}">
-                        <i class="fa fa-arrow-left fa-3x white-color" aria-hidden="true"></i>
-                    </a>
-                </div>
-                <div class="col-lg-10 col-xs-10">
-                    <p class="text-center header-text">
-                        {{MainC.pageTitle}}
-                    </p>
-                </div>
-
+            <div class="col-lg-2 col-sm-2 col-xs-2">
+                <a href="#/main" ng-hide="{{MainC.back}}">
+                    <i class="fa fa-arrow-left fa-3x white-color" aria-hidden="true"></i>
+                </a>
             </div>
-            <ng-view autoscroll></ng-view>
+            <div class="col-lg-10 col-xs-10">
+                <p class="text-center header-text">
+                    {{MainC.pageTitle}}
+                </p>
+            </div>
+
         </div>
+        <ng-view autoscroll></ng-view>
+    </div>
     <!--</div>-->
 
 </body>
