--- a/Test iOS/app/View/news.html
+++ b/Test iOS/app/View/news.html
@@ -1,41 +1,30 @@
-﻿
-<!--css import-->
+﻿<!--css import-->
 <link href="../Content/fonts/font-awesome-4.7.0/css/font-awesome.css" rel="stylesheet" />
 <link href="../Content/CSS/landing.css" rel="stylesheet" />
+<link href="../Content/CSS/lists.css" rel="stylesheet" />
 <link href="../Content/bootstrap.css" rel="stylesheet" />
 
-
-<div class="clearfix mobile-header">
-   
-        <div class="col-lg-2 col-sm-2 col-xs-2">
-            <a href="#/main">
-                <i class="fa fa-arrow-left fa-3x white-color" aria-hidden="true"></i>
-            </a>
-        </div>
-        <div class="col-lg-10 col-xs-10">
-            <p class="text-center header-text">
-                News
-            </p>
-        </div>
-  
-</div>
 <div ng-controller="NewsController as NC">
-    
-<div class="main-menu col-xs-12">
-    <div ng-repeat="x in NC.newsItems">
-        <div class="clearfix">
-            <div class="col-xs-12">
-                <h4>{{x.headline}}</h4>
+
+    <div>
+        <div ng-repeat="x in NC.newsItems" class="list-item">
+            <div class="clearfix">
+                <div class="col-xs-12 list-item-title">
+                    <h4>{{x.headline}}</h4>
+                </div>
+
+
+                <div class="list-item-body">
+
+                    <div class="col-xs-3 col-lg-3">
+                        <img src="../Content/images/goat.jpg" class="list-item-image" />
+                    </div>
+                    <div class="col-xs-9 col-lg-9">
+                        <p class="list-item-text">{{x.body}}</p>
+                    </div>
+                </div>
             </div>
 
-            <!--<div class="col-xs-3">
-                <img src="../Content/images/goat.jpg" />
-            </div>-->
-
-            <div class="col-xs-9">
-                <p>{{x.body}}</p>
-            </div>
         </div>
     </div>
-</div>  
-    </div>
+</div>
