--- a/Test iOS/app/View/landing.html
+++ b/Test iOS/app/View/landing.html
@@ -4,76 +4,69 @@
 <link href="../Content/bootstrap.css" rel="stylesheet" />
 
 
-<div class="main-menu col-xs-12">
-    <div class="clearfix">
-        <div class="col-xs-6">
-            <div class="main-icon left-icon">
-                <div class="inner-icon">
-                    <a href="#/map">
-                        <i class="fa fa-map fa-3x white-color" aria-hidden="true"></i>
-                        <p>Map</p>
-                    </a>
-                </div>
+    <div class="left-icon">
+        <a href="#/map">
+            <div class="main-icon">
+            
+                    <i class="fa fa-map white-color center" aria-hidden="true"></i>
+                    <p>Map</p>
+              
             </div>
-        </div>
+        </a>
 
-        <div class="col-xs-6">
-            <div class="main-icon right-icon">
-                <div class="inner-icon">
-                    <a href="#/news">
-                        <i class="fa fa-newspaper-o fa-3x" aria-hidden="true"> </i>
-                        <p>News</p>
-                    </a>
-                </div>
+        <a href="#/news">
+            <div class="main-icon">
+                
+
+                    <i class="fa fa-newspaper-o fa-5x" aria-hidden="true"> </i>
+                    <p>News</p>
+
+                
             </div>
-        </div>
+        </a>
+        <a href="#/events">
+            <div class="main-icon">
+                
+
+                    <i class="fa fa-calendar fa-5x" aria-hidden="true"></i>
+                    <p>Events</p>
+
+                
+            </div>
+        </a>
+    </div>
+    <div class="right-icon">
+        <a href="https://www.facebook.com/pages/Auer-Farm/103011423125686">
+            <div class="main-icon">
+               
+                    <i class="fa fa-facebook-official fa-5x" aria-hidden="true"></i>
+                    <p>Facebook</p>
+
+               
+            </div>
+        </a>
+
+        <a href="#/shop">
+            <div class="main-icon">
+               
+
+                    <i class="fa fa-shopping-basket fa-5x" aria-hidden="true"></i>
+                    <p>On Sale</p>
+
+               
+            </div>
+        </a>
+
+        <a href="#/comments">
+            <div class="main-icon">
+              
+
+                    <i class="fa fa-comments fa-5x" aria-hidden="true"></i>
+                    <p>Comments</p>
+
+                </div>
+            
+        </a>
     </div>
 
-    <div class="clearfix">
-        <div class="col-xs-6">
-            <div class="main-icon left-icon">
-                <div class="inner-icon">
-                    <a href="#/events">
-                        <i class="fa fa-calendar fa-3x" aria-hidden="true"></i>
-                        <p>Events</p>
-                    </a>
-                </div>
-            </div>
-        </div>
-        <div class="col-xs-6">
-            <div class="main-icon right-icon">
-                <div class="inner-icon">
-                    <a href="#/facebook">
-                        <i class="fa fa-facebook-official fa-3x" aria-hidden="true"></i>
-                        <p>Facebook</p>
-                    </a>
-                </div>
-            </div>
-        </div>
-    </div>
 
-    <div class="clearfix">
-        <div class="col-xs-6">
-            <div class="main-icon left-icon">
-                <div class="inner-icon">
-                    <a href="#/shop">
-                        <i class="fa fa-shopping-basket fa-3x" aria-hidden="true"></i>
-                        <p>On Sale</p>
-                    </a>
-                </div>
-            </div>
-        </div>
-        <div class="col-xs-6">
-            <div class="main-icon right-icon">
-                <div class="inner-icon">
-                    <a href="#/comments">
-                        <i class="fa fa-comments fa-3x" aria-hidden="true"></i>
-                        <p>Comments</p>
-                    </a>
-                </div>
-            </div>
-        </div>
-       
-    </div>
-
-</div>
