--- a/Test iOS/app/View/news.html
+++ b/Test iOS/app/View/news.html
@@ -7,10 +7,10 @@
 <div ng-controller="NewsController as NC">
 
     <div>
-        <div ng-repeat="x in NC.newsItems" class="list-item">
-            <div class="clearfix">
+        <div ng-repeat="story in NC.newsItems" class="list-item">
+            <div class="clearfix" ng-show="NC.showAll" ng-click="NC.toggleStory(story)")>
                 <div class="col-xs-12 list-item-title">
-                    <h4>{{x.headline}}</h4>
+                    <h4>{{story.headline}}</h4>
                 </div>
 
 
@@ -20,11 +20,28 @@
                         <img src="../Content/images/goat.jpg" class="list-item-image" />
                     </div>
                     <div class="col-xs-9 col-lg-9">
-                        <p class="list-item-text">{{x.body}}</p>
+                        <p class="list-item-text">{{story.body}}</p>
                     </div>
                 </div>
             </div>
 
+            <div class="clearfix" ng-show ="story.showFull">
+                <div class="col-xs-12 list-item-title">
+                    <h4>{{story.headline}}</h4>
+                    <h4>This the full story</h4>
+                </div>
+
+
+                <div class="list-item-body">
+
+                    <div class="col-xs-3 col-lg-3">
+                        <img src="../Content/images/goat.jpg" class="list-item-image" />
+                    </div>
+                    <div class="col-xs-9 col-lg-9">
+                        <p class="list-item-text">{{story.body}}</p>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </div>
