--- a/MobileRedux/Views/Home/landing.cshtml
+++ b/MobileRedux/Views/Home/landing.cshtml
@@ -8,7 +8,7 @@
         </div>
     </a>
 
-    <a href="/Home/News">
+    <a href="#/news">
         <div class="main-icon">
             <i class="fa fa-newspaper-o fa-5x" aria-hidden="true"> </i>
             <p>News</p>
