--- a/MobileRedux/Views/Shared/_Layout.cshtml
+++ b/MobileRedux/Views/Shared/_Layout.cshtml
@@ -3,40 +3,40 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>@ViewBag.Title - My ASP.NET Application</title>
+    <title>@ViewBag.Title - Auerfarm Mobile</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
-</head>
-<body>
-    <div class="navbar navbar-inverse navbar-fixed-top">
-        <div class="container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                @Html.ActionLink("Application name", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
-            </div>
-            <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                    <li>@Html.ActionLink("About", "About", "Home")</li>
-                    <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
-                </ul>
-            </div>
-        </div>
-    </div>
-    <div class="container body-content">
-        @RenderBody()
-        <hr />
-        <footer>
-            <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
-        </footer>
-    </div>
-
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
+    @Scripts.Render("~/bundles/scripts")
+</head>
+<body>
+
+    <div class="main-menu" ng-controller="MainController as MainC">
+        <div class="clearfix mobile-header">
+
+            <div class="col-xs-2">
+                <a href="#/main" ng-hide="{{MainC.back}}">
+                    <i class="fa fa-arrow-left fa-3x white-color" aria-hidden="true"></i>
+                </a>
+            </div>
+            <div class="col-xs-10">
+                <p class="text-center header-text">
+                    {{MainC.pageTitle}}
+                </p>
+            </div>
+
+        </div>
+
+        <div class="container body-content">
+            @RenderBody()
+           
+        </div>
+
+    </div>
+
+
+   
     @RenderSection("scripts", required: false)
 </body>
 </html>
