--- a/AdminPage/Content/Site.css
+++ b/AdminPage/Content/Site.css
@@ -1,7 +1,6 @@
 ﻿body {
     margin-top: 0;
     padding-bottom: 20px;
-    overflow:hidden;
 }
 
 /* Set padding to keep content from hitting the edges */
@@ -45,7 +44,7 @@ button:hover {
     padding-top:10px;
 }
 
-.menu-option {
+.menu-option, .new-item-button {
     padding: 10px 0;
 }
 
@@ -61,7 +60,6 @@ button:hover {
 }
 .test-content {
     width: 100vw;
-    height: 100vh;
 }
 .no-disp {
     display: none;
@@ -73,7 +71,6 @@ button:hover {
     margin: 0;
 }
 .full-height {
-    height: 100%;
 }
 .left-nav {
     position:fixed;
@@ -105,7 +102,7 @@ button:hover {
 	width: 100% !important;
     max-width: 100% !important;
 }
-img {
+.nav-image img {
     height: auto;
     width: auto;
     max-width: 100%!important;
@@ -113,4 +110,71 @@ img {
 
 .nav-image:hover {
     cursor: pointer;
+}
+
+.inline-block {
+    display: inline-block;
+}
+
+.border {
+    border: solid 1px;
+}
+
+.ti-label {
+    float: left;
+    clear: left;
+}
+
+textarea {
+    float: right;
+    width: 85% !important;
+    min-width: 85% !important;
+    margin-bottom: 10px;
+}
+
+.split-content {
+    width: 100%;
+}
+.left-content .ti-label, .right-content .ti-label {
+    float: left;
+    clear: left;
+    width: 30%;
+}
+.left-content input, .right-content input {
+    float: right;
+    width: 69% !important;
+    min-width: 69% !important;
+}
+.left-content {
+    float: left;
+    width: 48%;
+}
+.right-content {
+    float: right;
+    width: 48%;
+}
+
+#submit-new-item {
+    margin: 10px 0; 
+}
+
+.info-item-container {
+    border-bottom: solid 1px rgb(12, 104, 17);
+}
+.info-item-image {
+    display: inline-block;
+	width: auto;
+	height: 20vh;
+    max-height: 20vh !important;
+}
+.info-item-image img {
+    height: 100%;
+    width: auto;
+    max-height: 100% !important;
+}
+.new-item-button {
+    margin: 0 15px;
+}
+.top-pad {
+    padding-top: 10px;
 }
