--- a/AdminPage/Views/Home/CalendarPartial.cshtml
+++ b/AdminPage/Views/Home/CalendarPartial.cshtml
@@ -1,9 +1,81 @@
-﻿<div class="row page-name">
+﻿@model List<AdminPage.Models.DBModels.FarmInfoItem>
+
+<div class="row page-name">
     <div class="col-xs-1"></div>
     <div class="col-xs-10">
         <h2>Calendar Events</h2>
         <p>Here you can view, edit, create, and delete calendar events.</p>
     </div>
     <div class="col-xs-1"></div>
+</div>
+
+<div class="row page-content">
+    @Html.Hidden("item-type", "calendar")
+    <div class="col-xs-1"></div>
+    <div class="col-xs-11">
+        <div class="container-fluid new-item-button">
+            <a href="">
+                <button type="button" class="btn btn-default form-control" id="new-info-item">Add Calendar Item</button>
+            </a>
+        </div>
+        <div class="container-fluid item-list">
+            @foreach (var item in Model)
+            {
+                <div class="info-item-container container-fluid" id="@item.Id">
+                    <div class="row">
+                        <div class="col-xs-2">
+                            <div class="info-item-image">
+                                <img src="~/Content/rafi-filler-pic.jpg" alt="placeholder-pic" />
+                            </div>
+                        </div>
+                        <div class="col-xs-10 @*beside-img*@">
+                            <div class="split-content">
+                                <div class="left-content">
+                                    <div class='ti-label inline-block'>
+                                        <h6>Title:</h6>
+                                    </div>
+                                    <input type='text' class='inline-block form-control' id='item-title' value="@item.Title">
+                                </div>
+                                <div class="right-content">
+                                    <div class='ti-label inline-block'>
+                                        <h6>Date:</h6>
+                                    </div>
+                                    <input type='text' class='inline-block form-control' id='item-date' value="@item.Date">
+                                </div>
+                            </div>
+                            <div class='ti-label inline-block'>
+                                <h6>Description:</h6>
+                            </div>
+                            <textarea class='inline-block form-control' id='item-desc'>@item.Description</textarea>
+                            <div class="split-content">
+                                <div class="left-content">
+                                    <div class='ti-label inline-block'>
+                                        <h6>Post Date:  </h6>
+                                    </div>
+                                    <input type='text' class='form-control  inline-block' id='item-post-date' value="@item.StartDate">
+                                </div>
+                                <div class="right-content">
+                                    <div class='ti-label inline-block'>
+                                        <h6>Hide Date:  </h6>
+                                    </div>
+                                    <input type='text' class='form-control inline-block' id='item-remove-date' value="@item.EndDate">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row top-pad">
+                        <div class="col-xs-2">
+                            <input type="file" value="upload image" name="pic" accept="image/*" />
+                        </div>
+                        <div class="col-xs-6"></div>
+                        <div class="col-xs-4">
+                            <button type="button" class="form-control update-item" id="@item.Id">Update Info</button>
+                        </div>
+                    </div>
+                </div>
+            }
+        </div>
+    </div>
+    @*<div class="col-xs-1"></div>*@
 </div>
 
