--- a/AdminPage/Views/Home/MapPartial.cshtml
+++ b/AdminPage/Views/Home/MapPartial.cshtml
@@ -7,9 +7,7 @@
 </div>
 <div class="row">
     <div class="col-xs-1"></div>
-    <div class="col-xs-11" id="map">
-
-    </div>
+    <div class="col-xs-11" id="map"></div>
 </div>
 <div class="row map-opts-title page-name">
     <div class="col-xs-1"></div>
@@ -20,55 +18,3 @@
     </div>
 </div>
 
-<div class="row map-item-info">
-    <div class="col-xs-1"></div>
-    <div class="col-xs-3 tall-col">
-        <div class="map-item-image">
-            <img src="~/Content/rafi-filler-pic.jpg" alt="placeholder-pic" />
-        </div>
-    </div>
-    <div class="col-xs-8 @*beside-img*@">
-        <div class="split-content bottom-pad">
-            <div class="left-content">
-                <div class='ti-label inline-block'>
-                    <h6>Name:</h6>
-                </div>
-                <input type='text' class='inline-block form-control' id='item-name' >
-            </div>
-            <div class="right-content">
-                @*<div class='ti-label inline-block'>
-                    <h6>Date:</h6>
-                </div>
-                <input type='text' class='inline-block form-control' id='item-date' >*@
-            </div>
-        </div>
-        <div class='ti-label inline-block'>
-            <h6>Description:</h6>
-        </div>
-        <textarea class='inline-block form-control' id='item-desc'></textarea>
-        @*<div class="split-content">
-            <div class="left-content">
-                <div class='ti-label inline-block'>
-                    <h6>Post Date:  </h6>
-                </div>
-                <input type='text' class='form-control  inline-block' id='item-post-date' >
-            </div>
-            <div class="right-content">
-                <div class='ti-label inline-block'>
-                    <h6>Hide Date:  </h6>
-                </div>
-                <input type='text' class='form-control inline-block' id='item-remove-date'>
-            </div>
-        </div>*@
-    </div>
-</div>
-<div class="row">
-    <div class="col-xs-1"></div>
-    <div class="col-xs-3">
-        <input class="image-upload" type="file" value="upload image" name="pic" accept="image/*" />
-    </div>
-    <div class="col-xs-5"></div>
-    <div class="col-xs-3">
-        <button type="button" class="form-control update-item" >Add</button>
-    </div>
-</div>
