--- a/Mobile Cordova/www/views/main.html
+++ b/Mobile Cordova/www/views/main.html
@@ -1,25 +1,23 @@
-﻿<div>
+﻿<div ng-controller="MainController as MainC">
     <div class="clearfix icon-row">
-        <div class="col-xs-6">
-            <a href="#/map">
+        <div class="col-xs-6" ng-click="MainC.changeView('map')">
                 <div class="main-icon">
                     <i class="fa fa-map white-color center" aria-hidden="true"></i>
                     <p>Map</p>
                 </div>
-            </a>
         </div>
-        <div class="col-xs-6">
-            <a href="#/new">
+        <div class="col-xs-6" ng-click="MainC.changeView('news')">
+            
                 <div class="main-icon">
                     <i class="fa fa-newspaper-o fa-2x" aria-hidden="true"> </i>
                     <p>News</p>
                 </div>
-            </a>
+           
         </div>
     </div>
 
     <div class="clearfix icon-row">
-        <div class="col-xs-6">
+        <div class="col-xs-6" ng-click="MainC.changeView('events')">
             <a href="#/events">
                 <div class="main-icon">
                     <i class="fa fa-calendar fa-2x" aria-hidden="true"></i>
@@ -38,21 +36,17 @@
     </div>
 
     <div class="clearfix icon-row">
-        <div class="col-xs-6">
-            <a href="#/shop">
+        <div class="col-xs-6" ng-click="MainC.changeView('shop')">
                 <div class="main-icon">
                     <i class="fa fa-shopping-basket fa-5x" aria-hidden="true"></i>
                     <p>On Sale</p>
                 </div>
-            </a>
         </div>
-        <div class="col-xs-6">
-            <a href="#/comments">
+        <div class="col-xs-6" ng-click="MainC.changeView('news')">
                 <div class="main-icon">
                     <i class="fa fa-comments fa-5x" aria-hidden="true"></i>
                     <p>Comments</p>
                 </div>
-            </a>
         </div>
     </div>
 </div>
