--- a/Mobile Cordova/www/views/map.html
+++ b/Mobile Cordova/www/views/map.html
@@ -1,4 +1,5 @@
 ﻿
-<div ng-controller="MapController as MC">
-    <ui-gmap-google-map center='map.center' zoom='map.zoom'></ui-gmap-google-map>
+<div>
+    
 </div>
+
