--- a/AdminPage/Content/Site.css
+++ b/AdminPage/Content/Site.css
@@ -200,6 +200,10 @@ textarea {
     width: auto;
     max-height: 100% !important;
 }
+.info-window-img img {
+    max-height: 50px !important;
+    width: auto;
+}
 .image-upload {
     max-width: 100%;
 }
