--- a/AdminPage/Views/Home/CalendarPartial.cshtml
+++ b/AdminPage/Views/Home/CalendarPartial.cshtml
@@ -25,7 +25,7 @@
                     <div class="row">
                         <div class="col-xs-2">
                             <div class="info-item-image">
-                                <img src="~/Content/rafi-filler-pic.jpg" alt="placeholder-pic" />
+                                <img src="Content/rafi-filler-pic.jpg" alt="placeholder-pic" />
                             </div>
                         </div>
                         <div class="col-xs-10 @*beside-img*@">
