--- a/AdminPage/Views/Home/MapPartial.cshtml
+++ b/AdminPage/Views/Home/MapPartial.cshtml
@@ -1,20 +1,77 @@
 ﻿<div class="row page-name">
     <div class="col-xs-1"></div>
-    <div class="col-xs-11">
+    <div class="col-xs-6">
         <h2>Auerfarm Map</h2>
         <p>Here you can view, edit, create, and delete map items.</p>
+    </div>
+    <div class="col-xs-5">
+        <button type="button" class="form-control" id="map-list-view">List View</button>
     </div>
 </div>
 <div class="row">
     <div class="col-xs-1"></div>
     <div class="col-xs-11" id="map"></div>
 </div>
-<div class="row map-opts-title page-name">
-    <div class="col-xs-1"></div>
-    <div class="col-xs-11">
-        <h3>Add Map Object</h3>
-        <p>To add a new map object, you can fill in the below information, click add map object, and click on the map where you would like to place it.
-        Or, you can click on an existing map object to edit its information.</p>
+<div class="container-fluid no-disp" id="map-object-info">
+    <div class="row map-opts-title page-name">
+        <div class="col-xs-1"></div>
+        <div class="col-xs-11">
+            <h3 id="object-action">Add Map Object</h3>
+            <p>
+                To update or add marker information, fill in the information below and click "update" or "add".
+            </p>
+        </div>
+    </div>
+    <div class="row map-item-info">
+        <div class="col-xs-1"></div>
+        <div class="col-xs-3 tall-col">
+            <div class="map-item-image">
+                <img src="~/Content/rafi-filler-pic.jpg" alt="placeholder-pic" />
+            </div>
+        </div>
+        <div class="col-xs-8 @*beside-img*@">
+            <div class="split-content bottom-pad">
+                <div class="left-content">
+                    <div class='ti-label inline-block'>
+                        <h6>Name:</h6>
+                    </div>
+                    <input type='text' class='inline-block form-control' id='item-name'>
+                </div>
+                <div class="right-content">
+                    @*<div class='ti-label inline-block'>
+                            <h6>Date:</h6>
+                        </div>
+                        <input type='text' class='inline-block form-control' id='item-date' >*@
+                </div>
+            </div>
+            <div class='ti-label inline-block'>
+                <h6>Description:</h6>
+            </div>
+            <textarea class='inline-block form-control' id='item-desc'></textarea>
+            @*<div class="split-content">
+                    <div class="left-content">
+                        <div class='ti-label inline-block'>
+                            <h6>Post Date:  </h6>
+                        </div>
+                        <input type='text' class='form-control  inline-block' id='item-post-date' >
+                    </div>
+                    <div class="right-content">
+                        <div class='ti-label inline-block'>
+                            <h6>Hide Date:  </h6>
+                        </div>
+                        <input type='text' class='form-control inline-block' id='item-remove-date'>
+                    </div>
+                </div>*@
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-xs-1"></div>
+        <div class="col-xs-3">
+            <input class="image-upload" type="file" value="upload image" name="pic" accept="image/*" />
+        </div>
+        <div class="col-xs-5"></div>
+        <div class="col-xs-3">
+            <button type="button" class="form-control update-map-item" id="-1">Add</button>
+        </div>
     </div>
 </div>
-
