object-type and update object in list view now working

--- a/AdminPage/Content/Site.css
+++ b/AdminPage/Content/Site.css
@@ -14,6 +14,11 @@
     white-space: normal;
 }
 
+#item-type {
+width:auto;
+display:inline-block;
+}
+
 /* Set width on the form input elements since they're 100% wide by default */
 input,
 select,
