--- a/AdminPage/Views/Home/MapListPartial.cshtml
+++ b/AdminPage/Views/Home/MapListPartial.cshtml
@@ -24,14 +24,14 @@
         <div class="container-fluid item-list">
             @foreach (var item in Model)
             {
-                <div class="info-item-container container-fluid" id="@item.Id">
-                    <div class="row">
+                <div class="info-item-container map-list-items container-fluid" id="@item.Id">
+                    @*<div class="row">
                         <div class="col-xs-2">
                             <div class="info-item-image">
                                 <img src="Content/rafi-filler-pic.jpg" alt="placeholder-pic" />
                             </div>
                         </div>
-                        <div class="col-xs-10 @*beside-img*@">
+                        <div class="col-xs-10 ">
                             <div class="split-content">
                                 <div class="left-content">
                                     <div class='ti-label inline-block'>
@@ -40,30 +40,23 @@
                                     <input type='text' class='inline-block form-control' id='item-name' value="@item.Name">
                                 </div>
                                 <div class="right-content">
-                                    @*<div class='ti-label inline-block'>
-                                        <h6>Date:</h6>
-                                    </div>
-                                    <input type='text' class='inline-block form-control' id='item-date' value="@item.Date">*@
+                                    <label for="item-type">Type:</label>
+                                    <select class='form-control' id='item-type'>
+                                        <option selected disabled>...pick one...</option>
+                                        <option value="type-animal">Animal</option>
+                                        <option value="type-plant">Plant</option>
+                                        <option value="type-building">Building</option>
+                                        <option value="type-landmark">Landmark</option>
+                                        <option value="type-trail">Trail</option>
+                                        <option value="type-other">Other</option>
+                                    </select>
                                 </div>
                             </div>
                             <div class='ti-label inline-block'>
                                 <h6>Description:</h6>
                             </div>
                             <textarea class='inline-block form-control' id='item-desc'>@item.Description</textarea>
-                            <div class="split-content">
-                                <div class="left-content">
-                                    @*<div class='ti-label inline-block'>
-                                        <h6>Post Date:  </h6>
-                                    </div>
-                                    <input type='text' class='form-control  inline-block' id='item-post-date' value="@item.StartDate">*@
-                                </div>
-                                <div class="right-content">
-                                    @*<div class='ti-label inline-block'>
-                                        <h6>Hide Date:  </h6>
-                                    </div>
-                                    <input type='text' class='form-control inline-block' id='item-remove-date' value="@item.EndDate">*@
-                                </div>
-                            </div>
+                            
                         </div>
                     </div>
                     <div class="row top-pad">
@@ -73,6 +66,64 @@
                         <div class="col-xs-6"></div>
                         <div class="col-xs-4">
                             <button type="button" class="form-control update-item" id="@item.Id">Update Info</button>
+                        </div>
+                    </div>*@
+                    <div class="row map-item-info">
+                        <div class="col-xs-1"></div>
+                        <div class="col-xs-3 tall-col">
+                            <div class="map-item-image">
+                                <img src="~/Content/rafi-filler-pic.jpg" alt="placeholder-pic" />
+                            </div>
+                        </div>
+                        <div class="col-xs-8 ">
+                            <div class="split-content bottom-pad">
+                                <div class="left-content">
+                                    <div class='ti-label inline-block'>
+                                        <h6>Name:</h6>
+                                    </div>
+                                    <input type='text' class='inline-block form-control' id='item-name' value="@item.Name">
+                                </div>
+                                <div class="right-content">
+                                    <label for="item-type">Type:</label>
+                                    <select class='form-control' id='item-type' name="@item.Type">
+                                        <option disabled>...pick one...</option>
+                                        <option value="type-animal">Animal</option>
+                                        <option value="type-plant">Plant</option>
+                                        <option value="type-building">Building</option>
+                                        <option value="type-landmark">Landmark</option>
+                                        <option value="type-trail">Trail</option>
+                                        <option value="type-other">Other</option>
+                                    </select>
+                                </div>
+                            </div>
+                            <div class='ti-label inline-block'>
+                                <h6>Description:</h6>
+                            </div>
+                            <textarea class='inline-block form-control' id='item-desc'>@item.Description</textarea>
+                            @*<div class="split-content">
+                    <div class="left-content">
+                        <div class='ti-label inline-block'>
+                            <h6>Post Date:  </h6>
+                        </div>
+                        <input type='text' class='form-control  inline-block' id='item-post-date' >
+                    </div>
+                    <div class="right-content">
+                        <div class='ti-label inline-block'>
+                            <h6>Hide Date:  </h6>
+                        </div>
+                        <input type='text' class='form-control inline-block' id='item-remove-date'>
+                    </div>
+                </div>*@
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-xs-1"></div>
+                        <div class="col-xs-3">
+                            <input class="image-upload" type="file" value="upload image" name="pic" accept="image/*" />
+                        </div>
+                        <div class="col-xs-5"></div>
+                        <div class="col-xs-3">
+                            <button type="button" class="form-control update-map-list-item" id="">Update</button>
                         </div>
                     </div>
                 </div>
