--- a/AdminPage/Views/Home/MapListPartial.cshtml
+++ b/AdminPage/Views/Home/MapListPartial.cshtml
@@ -5,6 +5,16 @@
     <div class="col-xs-6">
         <h2>Map Object List</h2>
         <p>Here you can view, edit, and delete existing map objects.</p>
+        <label for="map-list-filter">Filter by Type:</label>
+        <select class='form-control' id='map-list-filter'>
+            <option selected value="none">...none...</option>
+            <option value="type-animal">Animal</option>
+            <option value="type-plant">Plant</option>
+            <option value="type-building">Building</option>
+            <option value="type-landmark">Landmark</option>
+            <option value="type-trail">Trail</option>
+            <option value="type-other">Other</option>
+        </select>
     </div>
     <div class="col-xs-5">
         <button type="button" class="form-control" id="map-map-view">Map View</button>
