--- a/AdminPage/Views/Home/MapPartial.cshtml
+++ b/AdminPage/Views/Home/MapPartial.cshtml
@@ -3,6 +3,16 @@
     <div class="col-xs-6">
         <h2>Auerfarm Map</h2>
         <p>Here you can view, edit, create, and delete map items.</p>
+        <label for="map-filter">Filter by Type:</label>
+        <select class='form-control' id='map-filter'>
+            <option selected value="none">...none...</option>
+            <option value="type-animal">Animal</option>
+            <option value="type-plant">Plant</option>
+            <option value="type-building">Building</option>
+            <option value="type-landmark">Landmark</option>
+            <option value="type-trail">Trail</option>
+            <option value="type-other">Other</option>
+        </select>
     </div>
     <div class="col-xs-5">
         <button type="button" class="form-control" id="map-list-view">List View</button>
