--- a/Mobile Cordova/www/views/map.html
+++ b/Mobile Cordova/www/views/map.html
@@ -1,6 +1,6 @@
 ﻿<head>
-    <script src="http://maps.google.com/maps/api/js" type="text/javascript"></script>
-    <script type="text/javascript">
+    <!--<script src="http://maps.google.com/maps/api/js" type="text/javascript"></script>-->
+    <!--<script type="text/javascript">-->
 
 
         function onSuccess() {
@@ -10,6 +10,8 @@
                 zoom: 18,
                 mapTypeId: 'satellite'
             });
+
+
         }
 
         google.maps.event.addDomListener(window, 'load', onSuccess);
