--- a/Mobile Cordova/www/css/map.css
+++ b/Mobile Cordova/www/css/map.css
@@ -1,11 +1,62 @@
 ﻿.angular-google-map-container { height: 200px; }
 
-#map{
-    height:500px; 
-    width:500px; 
-/*    box-shadow: 3px 3px 10px gray;*/  
+#map {
+    height: 580px;
+    width: 500px;
+    /*    box-shadow: 3px 3px 10px gray;*/
+    position: relative;
+    top: 0;
+    left: 0;
+}
+
+    #map.slideUp {
+        height: 400px;
+    }
+
+    #map.slideDown {
+        height: 580px;
+    }
+
+    #map.slider {
+        transition: all 1s ease-in-out;
     }
 
 #map-canvas {
             height: 100%;
         }
+#overlap {
+    width: 80%;
+    height: 100%;
+    transition: all linear 1s;
+    position: absolute;
+    top: 450px;
+    left: 50px;
+    padding-top: 0;
+}
+
+#overlap.quickClose {
+    transition: all linear 0s;
+}
+
+    #overlap.ng-hide {
+        height: 0;
+        top: 700px;
+    }
+
+.vertical {
+}
+
+.container {
+    float: left;
+    width: 40%;
+
+}
+
+img {
+    max-width: 40%;
+    height: auto;
+}
+
+.page-header{
+    margin-top: 30px !important;
+}
