--- a/Mobile Cordova/www/views/news.html
+++ b/Mobile Cordova/www/views/news.html
@@ -10,11 +10,11 @@
                 <div ng-show="NC.showAll" ng-click="NC.toggleStory(story)" )>
                     <div class="clearfix">
                         <div class="list-item-title clearfix">
-                            <div class="title-inner col-xs-9">
+                            <div class="title-inner col-xs-7">
                                 {{story.Title}}
                             </div>
-                            <div class="list-item-date col-xs-3">
-                                {{story.Date}}
+                            <div class="list-item-date col-xs-5">
+                                {{story.Date | jsDate | date:"MM-dd-yy"}}
                             </div>
                         </div>
                     </div>
@@ -35,12 +35,12 @@
 
                 <div class="list-item-title clearfix">
 
-                    <div class="title-inner col-xs-10">
+                    <div class="title-inner col-xs-7">
                         {{story.Title}}
                     </div>
 
-                    <div class="list-item-date col-xs-2">
-                        {{story.Date}}
+                    <div class="list-item-date col-xs-5">
+                        {{story.Date | jsDate | date:"MM-dd-yy"}}
                     </div>
 
                 </div>
