--- a/AdminPage/Views/Home/CalendarPartial.cshtml
+++ b/AdminPage/Views/Home/CalendarPartial.cshtml
@@ -43,6 +43,7 @@
                                     <input type='text' class='inline-block form-control' id='item-date' value="@item.Date">
                                 </div>
                             </div>
+                            <br />
                             <div class='ti-label inline-block'>
                                 <h6>Description:</h6>
                             </div>
@@ -67,12 +68,16 @@
                         <div class="col-xs-2">
                             <input type="file" value="upload image" name="pic" accept="image/*" />
                         </div>
-                        <div class="col-xs-6"></div>
+                        <div class="col-xs-2"></div>
                         <div class="col-xs-4">
-                            <button type="button" class="form-control update-item" id="@item.Id">Update Info</button>
+                            <button type="button" class="form-control update-item" id="@item.Id">Update</button>
+                        </div>
+                        <div class="col-xs-4">
+                            <button type="button" class="form-control delete-item" id="@item.Id">Delete</button>
                         </div>
                     </div>
                 </div>
+                <br />
             }
         </div>
     </div>
