--- a/AdminPage/Views/Home/ShopPartial.cshtml
+++ b/AdminPage/Views/Home/ShopPartial.cshtml
@@ -1,8 +1,76 @@
-﻿<div class="row page-name">
+﻿@model List<AdminPage.Models.DBModels.Product>
+
+<div class="row page-name">
     <div class="col-xs-1"></div>
     <div class="col-xs-10">
-        <h2>Items For Sale</h2>
-        <p>Here you can view, edit, add, and remove items currently sold at Auerfarm.</p>
+        <h2>Shop</h2>
+        <p>Here you can view, edit, create, and delete products.</p>
     </div>
     <div class="col-xs-1"></div>
 </div>
+
+<div class="row page-content">
+    <div class="col-xs-1"></div>
+    <div class="col-xs-11">
+        <div class="container-fluid new-item-button">
+            <a href="">
+                <button type="button" class="btn btn-default form-control" id="new-product">Add Product</button>
+            </a>
+        </div>
+        <div class="container-fluid item-list">
+            @foreach (var item in Model)
+            {
+                <div class="info-item-container container-fluid" id="@item.Id">
+                    <div class="row">
+                        <div class="col-xs-2">
+                            <div class="info-item-image">
+                                <img src="Content/rafi-filler-pic.jpg" alt="placeholder-pic" />
+                            </div>
+                        </div>
+                        <div class="col-xs-10 @*beside-img*@">
+                            <div class="split-content">
+                                <div class="left-content">
+                                    <div class='ti-label inline-block'>
+                                        <h6>Name:</h6>
+                                    </div>
+                                    <input type='text' class='inline-block form-control' id='item-title' value="@item.Name">
+                                </div>
+                                <div class="right-content">
+                                    <div class='ti-label inline-block'>
+                                        <h6>Date:</h6>
+                                    </div>
+                                    <input type='text' class='inline-block form-control' id='item-date' value="@item.Date">
+                                </div>
+                            </div>
+                            <br />
+                            <div class='ti-label inline-block'>
+                                <h6>Description:</h6>
+                            </div>
+                            <textarea class='inline-block form-control' id='item-desc'>@item.Description</textarea>
+
+                            <div class='ti-label inline-block'>
+                                <h6>Price:  </h6>
+                            </div>
+                            <input type='text' class='form-control  inline-block' id='item-post-date' value="@item.Price">
+                        </div>
+                    </div>
+                    <div class="row top-pad">
+                        <div class="col-xs-2">
+                            <input type="file" value="upload image" name="pic" accept="image/*" />
+                        </div>
+                        <div class="col-xs-2"></div>
+                        <div class="col-xs-4">
+                            <button type="button" class="form-control update-item" id="@item.Id">Update</button>
+                        </div>
+                        <div class="col-xs-4">
+                            <button type="button" class="form-control delete-item" id="@item.Id">Delete</button>
+                        </div>
+                    </div>
+                </div>
+                <br />
+            }
+        </div>
+    </div>
+    @*<div class="col-xs-1"></div>*@
+</div>
+
