--- a/Mobile Cordova/www/css/map.css
+++ b/Mobile Cordova/www/css/map.css
@@ -24,14 +24,16 @@
 #map-canvas {
             height: 100%;
         }
+
 #overlap {
-    width: 80%;
+    width: 100%;
     height: 100%;
     transition: all linear 1s;
-    position: absolute;
+    /*position: absolute;*/
     top: 450px;
     left: 50px;
     padding-top: 0;
+    padding-left: 10px;
 }
 
 #overlap.quickClose {
@@ -46,14 +48,11 @@
 .vertical {
 }
 
-.container {
-    float: left;
-    width: 40%;
 
-}
-
-img {
-    max-width: 40%;
+.info-picture {
+    margin-top: 5%;
+    max-width: 50%;
+    max-height: 95%;
     height: auto;
 }
 
